--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,19 @@ body main #project-display .form-list .btn_group button:last-child:hover {
   background: #eee;
   border-radius: 100px;
 }
+body main #time-display {
+  width: 94%;
+  max-width: 320px;
+  background: #dbd7ec;
+  border-radius: 10px 10px 0 0;
+  margin: 0 auto;
+  padding: 10px 20px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  text-align: center;
+}
 body footer {
   max-width: none;
   background: #080311;
