--- a/css/styles.less
+++ b/css/styles.less
@@ -162,6 +162,19 @@
                     }
                 }
             }
+            #time-display {
+                width: 94%;
+                max-width: 320px;
+                background: #dbd7ec;
+                border-radius: 10px 10px 0 0;
+                margin: 0 auto;
+                padding: 10px 20px;
+                position: fixed;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                text-align: center;
+            }
         }
 
         footer {
